Bug 479350 - Folder selector fails to expand folders if started from "Create Symlink" dialog on desktop
Summary: Folder selector fails to expand folders if started from "Create Symlink" dial...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: desktop:/ IOWorker (other bugs)
Version First Reported In: 5.27.10
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 512218 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-03 09:53 UTC by medin
Modified: 2025-11-30 11:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2024-01-03 09:53:53 UTC
Steps:

1. Right click on desktop and select "Create New"> "Link to File or Directory"
2. Click on "Open file dialog" button and select "Directory"
3. Try to navigate and expands multiple folders

Expected result:
Any folder should be expanded if it contains another sub-directories.

Observed result:
Cannot expand folders.


This happens only when folder selector is started from that desktop "Create Symlink" dialog, it doesn't happen on other cases.

Operating System: Manjaro Linux 
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11
Kernel Version: 6.6.9-1-MANJARO (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-02-16 18:13:50 UTC
Can reproduce. This is an issue with the desktop:// ioworker as far as I can tell. I see desktop:// being inappropriately prepended to the path.
Comment 2 Nate Graham 2025-11-17 20:36:33 UTC
*** Bug 512218 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2025-11-17 20:38:21 UTC
A potential fix is in progress with https://invent.kde.org/frameworks/kio/-/merge_requests/2057.
Comment 4 Bug Janitor Service 2025-11-22 09:46:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3320
Comment 5 Méven 2025-11-30 11:05:21 UTC
Git commit 71a628ab22ffc688b0acddb7befafaf6c3baef85 by Méven Car, on behalf of Lluc Simó Margalef.
Committed on 30/11/2025 at 11:05.
Pushed by meven into branch 'master'.

Fix creating links to subdirectories of desktop links

This commit request fixes a bug that caused the creation of invalid links to
subdirectories of desktop links. The bug was caused by the use of a `desktop:/`
URL as the base for the new link, which resulted in an invalid path.

The fix is to use `mostLocalUrl()` to get the local file system path before
creating the link dialog. This ensures that the `KUrlRequester` start path
is valid and so removes the chance to create a non-working symlink.
FIXED-IN: 6.21

M  +6    -1    src/filewidgets/knewfilemenu.cpp

https://invent.kde.org/frameworks/kio/-/commit/71a628ab22ffc688b0acddb7befafaf6c3baef85