Folder: Use local URL for "Create New" actions

Avoids passing non-local scheme urls, which were causing issues.

Related to frameworks/kio!2057
BUG: 479350