containments/desktop/plugins/folder/foldermodel.cpp
@@ -1866,7 +1866,7 @@ void FolderModel::updateActions()
 
     if (m_newMenu) {
         m_newMenu->checkUpToDate();
-        m_newMenu->setWorkingDirectory(m_dirModel->dirLister()->url());
+        m_newMenu->setWorkingDirectory(m_dirModel->dirLister()->url().mostLocalUrl());
         // we need to set here as well, when the menu is shown via AppletInterface::eventFilter
         m_menuPosition = QCursor::pos();
 
@@ -2375,7 +2375,7 @@ void FolderModel::undoTextChanged(const QString &text)
 
 void FolderModel::createFolder()
 {
-    m_newMenu->setWorkingDirectory(m_dirModel->dirLister()->url());
+    m_newMenu->setWorkingDirectory(m_dirModel->dirLister()->url().mostLocalUrl());
     m_newMenu->createDirectory();
 }
 
